# sys_info

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ProcessInfo.cpp  ProcessInfo.h  README.md  SystemInformation.cpp  SystemInformation.h  main.cpp
core/: CMakeLists.txt
core/include/: ProcessInfo.h
core/src/: ProcessInfo.cpp  SystemInformation.cpp
